# tee-primitive

./: README.md
tee-primitive/: Cargo.toml  build.rs
tee-primitive/proto/: teeprimitive.proto
tee-primitive/quote-server/: Cargo.toml  Dockerfile  build.rs
tee-primitive/quote-server/deployment/: Deployment_Guide.MD  quote_server-daemonset.yaml
tee-primitive/quote-server/proto/: quote_server.proto
tee-primitive/quote-server/src/: quote_client.rs  quote_server.rs  tee.rs
tee-primitive/quote-server/tool/grpc_health_probe/: README.md
tee-primitive/quote-server/tool/grpcurl/: README.md  help.md
tee-primitive/quote-server/tool/python-client-example/: README.md  client.py  quote_server.proto
tee-primitive/quote-server/tool/rust-client-example/: quote_client.rs
tee-primitive/src/: tdx.rs  teeprimitive-client.rs  teeprimitive-server.rs
