[package]
name = "tee-primitive-server"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the teeprimitive gRPC server
name = "teeprimitive-server"
path = "src/teeprimitive-server.rs"

[[bin]] # Bin to run the teeprimitive gRPC client
name = "teeprimitive-client"
path = "src/teeprimitive-client.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9"