[package]
name = "tee-primitive-server"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the teeprimitive gRPC server
name = "teeprimitive-server"
path = "src/teeprimitive-server.rs"

[[bin]] # Bin to run the teeprimitive gRPC client
name = "teeprimitive-client"
path = "src/teeprimitive-client.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
async-trait = "0.1.56"
base64 = "0.13.0"
log = "0.4.14"
serde_json = "1.0"
#tdx-attest-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", rev = "cc582e8be0c9010295c66fb58c59f74744017600", optional = true }
tdx-attest-rs = { path = "./SGXDataCenterAttestationPrimitives/QuoteGeneration/quote_wrapper/tdx-attest-rs"}

[build-dependencies]
tonic-build = "0.9"